--- a/spring-opendal/Cargo.toml
+++ b/spring-opendal/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://spring-rs.github.io/"
 repository = "https://github.com/spring-rs/spring-rs/"
 
 [dependencies]
-spring = { path = "../../spring", version = "0.2.0" }
+spring = { version = "0.2" }
 schemars = "0.8"
 serde = "1.0"
 anyhow = "1.0"
